--- a/.gitignore
+++ b/.gitignore
@@ -11,5 +11,13 @@
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
 
+# Eclipse files
+.classpath
+.project
+.settings
+
+# Project files
 .gradle
 build
+download
+/bin
