Switched from activity.txt to status.xml, added code to parse and placeholder class to notify GCM server.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,6 @@
-file.download.from=http://aurorawatch.lancs.ac.uk/api/0.1/activity.txt
-file.download.to=download/activity.txt
+file.download.from=http://aurorawatch.lancs.ac.uk/api/0.1/status.xml
+file.download.to=download/status.xml
 file.download.userAgent=aurora-watch-developers/AuroraWatchServer
+
+gcm.apiKey=AIzaSyCSY4dIcYL1J3xHDTs1HMtnPVHl2J72_JY
+gcm.projectNumber=675205179905
