--- a/build.gradle
+++ b/build.gradle
@@ -26,7 +26,7 @@ dependencies {
     compile 'ch.qos.logback:logback-classic:1.1.3'
     compile 'com.google.appengine:appengine-api-1.0-sdk:1.9.19'
     compile 'commons-io:commons-io:2.4'
-    compile 'org.springframework:spring-web:3.2.13.RELEASE'
+    compile 'org.springframework:spring-webmvc:3.2.13.RELEASE'
     testCompile 'junit:junit:4.11'
 }
 
@@ -36,6 +36,7 @@ task wrapper(type: Wrapper) {
 
 appengine {
     httpPort = 5000
+    jvmFlags = ['-Xdebug', '-Xrunjdwp:transport=dt_socket,server=y,suspend=n,address=5001']
 
     appcfg {
         email = 'heather.mccartney@gmail.com'
