First attempt at parsing the token to get the email, aud and azp.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,7 @@ file.download.userAgent=aurora-watch-developers/AuroraWatchServer
 
 gcm.apiKey=AIzaSyCSY4dIcYL1J3xHDTs1HMtnPVHl2J72_JY
 gcm.projectNumber=675205179905
+
+tokenChecker.scope=https://www.googleapis.com/auth/userinfo.profile
+tokenChecker.aud=675205179905-8p9vslc0dkqdqoa4p20c16p2uk8jap3b.apps.googleusercontent.com
+tokenChecker.azp=675205179905-fedmbsd27t6silvjnusdj26s6h7peh2t.apps.googleusercontent.com
