--- a/build.gradle
+++ b/build.gradle
@@ -15,7 +15,7 @@ apply plugin: 'war'
 
 war {
     baseName = 'aurora-watch-server'
-    version = '3'
+    version = '4'
 }
 
 repositories {
@@ -24,7 +24,8 @@ repositories {
 
 dependencies {
     compile 'ch.qos.logback:logback-classic:1.1.3'
-    compile 'com.google.appengine:appengine-api-1.0-sdk:1.9.19'
+    compile 'com.google.appengine:appengine-api-1.0-sdk:1.9.20'
+    compile 'com.google.api-client:google-api-client-gson:1.20.0'
     compile 'commons-io:commons-io:2.4'
     compile 'org.springframework:spring-webmvc:3.2.13.RELEASE'
     testCompile 'junit:junit:4.11'
