Added multiple azp.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,4 +5,4 @@ gcm.apiKey=AIzaSyCSY4dIcYL1J3xHDTs1HMtnPVHl2J72_JY
 gcm.projectNumber=675205179905
 
 tokenChecker.aud=675205179905-34iahvkv5efvk3n5tbbt9qkr7en0hup3.apps.googleusercontent.com
-tokenChecker.azp=675205179905-p1khpeoshe63hfa6di9seao6upuvotno.apps.googleusercontent.com
+tokenChecker.azp=675205179905-34iahvkv5efvk3n5tbbt9qkr7en0hup3.apps.googleusercontent.com,675205179905-9iuufg567jkgpkjjts32uno1mh8fma0e.apps.googleusercontent.com,675205179905-iliedc8ig6tve982lbf475uieucvmch8.apps.googleusercontent.com,675205179905-kbg5ckfhlsmn801vneo5f8v8bgq2mmd8.apps.googleusercontent.com,675205179905-p1khpeoshe63hfa6di9seao6upuvotno.apps.googleusercontent.com
